--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -50,8 +50,7 @@
 
                 <label>Hongkong Dollar(Hongkong): </label>
 
-                <input id="hkdollar" [(ngModel)]="objConverter.HongkongDo"
-                    [ngModelOptions]="{standalone: true}"><br><br>
+                <input id="hkdollar" [(ngModel)]="objConverter.HongkongDo" [ngModelOptions]="{standalone: true}"><br><br>
 
                 <label>Peso(Mexico): </label>
 
