--- a/src/app/demo/demo.component.css
+++ b/src/app/demo/demo.component.css
@@ -53,7 +53,7 @@ label{
 	font-family: Times New Roman;
 }
 p{font-weight:bold;
-background: #40be0e;
+background: #49d611;
 border: 10px solid #000;
 
 }
